--- a/setup.cfg
+++ b/setup.cfg
@@ -21,13 +21,13 @@ python_requires = >= 3.7
 install_requires =
     dataclasses
     multipledispatch
-    numpy
+    numpy>=1.19
     pandas
     tqdm
     PyQt5
     pyqt5ac
     pyqtgraph
-    tensorflow
+    tensorflow==2.6.0
 
 [options.extras_require]
 test =
