--- a/setup.cfg
+++ b/setup.cfg
@@ -22,12 +22,13 @@ install_requires =
     dataclasses
     multipledispatch
     numpy>=1.19
+    opencv-python
     pandas
-    tqdm
     PyQt5
     pyqt5ac
     pyqtgraph
     tensorflow==2.6.0
+    tqdm
 
 [options.extras_require]
 test =
