--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = aisi_joints
 version = attr: aisi_joints.__version__
 description = A python library with tools for development of SBB AISI models.
 long_description = file: README.md
-url = https://github.com/antolu/aisi-jionts
+url = https://github.com/antolu/aisi-joints
 author = Anton Lu
 author_email = anton96lu@gmail.com
 license = GNU General Public License version 3
@@ -27,7 +27,6 @@ install_requires =
     PyQt5
     pyqt5ac
     pyqtgraph
-    tensorflow==2.6.0
     tqdm
 
 [options.extras_require]
@@ -35,6 +34,8 @@ test =
     flake8
     pylint
     pytest-cov
+all =
+    tensorflow==2.6.0
 
 [flake8]
 extend-ignore =
