add fiftyone script

--- a/setup.cfg
+++ b/setup.cfg
@@ -20,6 +20,7 @@ packages = find:
 python_requires = >= 3.7
 install_requires =
     dataclasses
+    fiftyone[desktop]
     multipledispatch
     numpy>=1.19
     opencv-python
