--- a/aisi_joints/img_cls/config.yml
+++ b/aisi_joints/img_cls/config.yml
@@ -1,5 +1,11 @@
-epochs: 1000
 workers: 4
 batch_size: 32
 train_data: ../Insulated_Joints/dataset/train.tfrecord
 validation_data: ../Insulated_Joints/dataset/validation.tfrecord
+transfer:
+  epochs: 100
+  learning_rate: 0.001
+finetune:
+  epochs: 10000
+  learning_rate: 0.0001
+  decay_steps: 200000
