--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ install_requires =
     fiftyone[desktop]
     multipledispatch
     numpy>=1.19
+    object_detection
     opencv-python
     pandas
     PyQt5
