add better detr training script

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,11 @@ install_requires =
     pyqt5ac
     pyqtgraph
     scikit-learn
+    torch
+    torchaudio
+    torchvision
     tqdm
+    transformers
 
 [options.extras_require]
 test =
