add dynamic submodule dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -18,23 +18,23 @@ include_package_data = true
 packages = find:
 
 python_requires = >= 3.7
-install_requires =
-    dataclasses
-    fiftyone[desktop]
-    multipledispatch
-    numpy>=1.19
-    object_detection
-    opencv-python
-    pandas
-    PyQt5
-    pyqt5ac
-    pyqtgraph
-    scikit-learn
-    torch
-    torchaudio
-    torchvision
-    tqdm
-    transformers
+;install_requires =
+;    dataclasses
+;    fiftyone[desktop]
+;    multipledispatch
+;    numpy>=1.19
+;    object_detection
+;    opencv-python
+;    pandas
+;    PyQt5
+;    pyqt5ac
+;    pyqtgraph
+;    scikit-learn
+;    torch
+;    torchaudio
+;    torchvision
+;    tqdm
+;    transformers
 
 [options.extras_require]
 test =
