update setup and add installation instructions

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,24 +17,7 @@ classifiers =
 include_package_data = true
 packages = find:
 
-python_requires = >= 3.7
-;install_requires =
-;    dataclasses
-;    fiftyone[desktop]
-;    multipledispatch
-;    numpy>=1.19
-;    object_detection
-;    opencv-python
-;    pandas
-;    PyQt5
-;    pyqt5ac
-;    pyqtgraph
-;    scikit-learn
-;    torch
-;    torchaudio
-;    torchvision
-;    tqdm
-;    transformers
+python_requires = >= 3.8
 
 [options.extras_require]
 test =
@@ -42,7 +25,30 @@ test =
     pylint
     pytest-cov
 all =
-    tensorflow==2.6.0
+    tensorflow>=2.8.0
+    dataclasses
+    fiftyone[desktop]
+    keras_tuner
+    multipledispatch
+    numpy>=1.19
+    object_detection
+    opencv-python
+    pandas
+    pillow
+    pycocotools
+    PyQt5
+    pyqt5ac
+    pyqtgraph
+    pytorch_lightning
+    ray[tune]
+    scikit-learn
+    timm
+    torch
+    torchaudio
+    torchvision
+    tqdm
+    transformers
+    git+https://github.com/antolu/self_supervised.git
 
 [flake8]
 extend-ignore =
