final update of pipeline configs

--- a/pipeline_configs/tfod/faster_rcnn.config
+++ b/pipeline_configs/tfod/faster_rcnn.config
@@ -86,23 +86,24 @@ model {
 
 train_config: {
   batch_size: 12
-  num_steps: 50000
+  num_steps: 75000
   optimizer {
-    adam_optimizer: {
+      momentum_optimizer: {
       learning_rate: {
         cosine_decay_learning_rate {
-          learning_rate_base: 0.0005
-          total_steps: 50000
+          learning_rate_base: 0.008
+          total_steps: 100000
           warmup_learning_rate: 0.0
           warmup_steps: 5000
         }
       }
+      momentum_optimizer_value: 0.9
     }
     use_moving_average: false
   }
   gradient_clipping_by_norm: 10.0
   fine_tune_checkpoint_version: V2
-  fine_tune_checkpoint: "/daten/AISI/Insulated_Joints/anton/pretrained/faster_rcnn_inception_resnet/checkpoint/ckpt-0"
+  fine_tune_checkpoint: "/daten/results-work-dir/research/20220309_Schienenstosse_master/data/anton/pretrained/faster_rcnn_inception_resnet/checkpoint/ckpt-0"
   fine_tune_checkpoint_type: "detection"
   data_augmentation_options {
     random_horizontal_flip {
@@ -140,9 +141,9 @@ train_config: {
   }
 }
 train_input_reader: {
-  label_map_path: "dataset/labelmap.pbtxt"
+  label_map_path: "../dataset/labelmap.pbtxt"
   tf_record_input_reader {
-    input_path: "dataset/train.tfrecord"
+    input_path: "../dataset/train.tfrecord"
   }
 }
 
@@ -156,10 +157,10 @@ eval_config: {
 }
 
 eval_input_reader: {
-  label_map_path: "dataset/labelmap.pbtxt"
+  label_map_path: "../dataset/labelmap.pbtxt"
   shuffle: false
   num_epochs: 1
   tf_record_input_reader {
-    input_path: "dataset/validation.tfrecord"
+    input_path: "../dataset/validation.tfrecord"
   }
 }
